Добавить свойство проекта "Объединять рассчитанный тип с документирующим" https://github.com/tormozit/EDT.Comfort/issues/509. Исправления подсказки по параметрам в редакторе модуля, инспекторе, точке останова.